recursion.cons.lessons.recursion.cons.Nth.scala.error
nth:7: error: type mismatch;
 found   : (List[Int], Int)
 required: Int
	else return (l.tail, n -1)
                    ^