recursion.cons.lessons.recursion.cons.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
	if (n == 1)
	{
		return l.head
	}

	else return (l.tail, n -1)
}
